[tool.poetry]
name = "airbnb"
version = "0.1.0"
description = ""
authors = ["HyunWoo Choi <116826162+chhw130@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
